--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -133,6 +133,18 @@
             cursor: pointer;
         }
 
+        .disabled {
+            opacity: 0.5;
+            img {
+                cursor: not-allowed;
+            }
+        }
+
+        &:disabled img {
+            cursor: not-allowed;
+            opacity: 0.5;
+        }
+
         input {
             flex: 1;
             background-color: rgba(17, 25, 40, 0.5);
