--- a/src/components/list/userInfo/userInfo.css
+++ b/src/components/list/userInfo/userInfo.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
 
     .user {
-        display:flex;
+        display: flex;
         align-items: center;
         gap: 20px;
 
@@ -17,14 +17,33 @@
         }
     }
 
-    .icons {
+    .wrapper {
         display: flex;
-        gap: 20px;
+        flex-direction: column;
 
-        img {
-            width: 20px;
-            height: 20px;
-            cursor: pointer;
+        .icons {
+            display: flex;
+            gap: 20px;
+
+            img {
+                width: 20px;
+                height: 20px;
+                cursor: pointer;
+            }
+
+            button {
+                background: none; /* Remove default button background */
+                border: none; /* Remove default button border */
+                padding: 0; /* Remove default button padding */
+                cursor: pointer; /* Change cursor to pointer on hover */
+                display: inline-block; /* Ensure button wraps the image tightly */
+
+                img {
+                    width: 20px;
+                    height: 20px;
+
+                }
+            }
         }
     }
 }
