--- a/src/components/list/userInfo/userInfo.css
+++ b/src/components/list/userInfo/userInfo.css
@@ -41,8 +41,21 @@
                 img {
                     width: 20px;
                     height: 20px;
-
                 }
+            }
+        }
+
+        .info {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            margin-top: 20px;
+
+            input {
+                padding: 10px;
+                border: 1px solid #ccc;
+                border-radius: 5px;
+                font-size: 14px;
             }
         }
     }
