--- a/src/components/list/userInfo/userInfo.css
+++ b/src/components/list/userInfo/userInfo.css
@@ -20,10 +20,11 @@
     .wrapper {
         display: flex;
         flex-direction: column;
+        gap: 10px;
 
         .icons {
             display: flex;
-            gap: 20px;
+            gap: 10px;
 
             img {
                 width: 20px;
@@ -32,11 +33,11 @@
             }
 
             button {
-                background: none; /* Remove default button background */
-                border: none; /* Remove default button border */
-                padding: 0; /* Remove default button padding */
-                cursor: pointer; /* Change cursor to pointer on hover */
-                display: inline-block; /* Ensure button wraps the image tightly */
+                background: none;
+                border: none;
+                padding: 0;
+                cursor: pointer;
+                display: inline-block;
 
                 img {
                     width: 20px;
@@ -44,19 +45,54 @@
                 }
             }
         }
-
-        .info {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            margin-top: 20px;
-
-            input {
-                padding: 10px;
-                border: 1px solid #ccc;
-                border-radius: 5px;
-                font-size: 14px;
-            }
-        }
     }
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    z-index: 1000; /* Ensure it is above other elements */
+}
+
+.modal-content {
+    background: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    width: 90%;
+    max-width: 500px;
+}
+
+.modal-content input {
+    width: calc(100% - 24px);
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 16px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: border-color 0.3s ease;
+    margin-bottom: 10px;
+
+    &:focus {
+        border-color: #5183fe;
+        outline: none;
+    }
+}
+
+.modal-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    background: none;
+    border: none;
+    font-size: 20px;
 }
